# nimbus-mac

./: .gitignore  LICENSE  Package.swift  README.md  project.yml
.github/workflows/: ci.yml  release.yml
App/Nimbus/: NimbusApp.swift  RootView.swift
App/Nimbus/Features/: CleanupView.swift  DuplicatesView.swift  HealthMenuView.swift  HealthView.swift  OnboardingView.swift  PerformanceView.swift  RemovalModals.swift  SettingsView.swift  SmartScanView.swift  SpaceLensView.swift  UninstallerView.swift
App/Nimbus/Privileged/: XPCHelperClient.swift
App/Nimbus/Support/: AppEnvironment.swift  (+2 more)
Config/: Info-App.plist  Nimbus.entitlements  NimbusHelper.entitlements  com.nimbus.app.helper.plist
Helper/NimbusHelper/: main.swift
Shared/: HelperProtocol.swift
Sources/NimbusFFI/: RustHashers.swift
Sources/NimbusViewModels/: CleanupViewModel.swift  DuplicatesViewModel.swift  HealthViewModel.swift  Localization.swift  PerformanceViewModel.swift  SettingsViewModel.swift  SmartScanViewModel.swift  SpaceLensViewModel.swift  UninstallerViewModel.swift
Tests/NimbusKitTests/: DiskUsageTreeBuilderTests.swift  Fakes.swift  LeftoverResolverTests.swift  ModulesTests.swift  SafetyTests.swift  ScannerIntegrationTests.swift  SelectionStoreTests.swift  TreemapLayoutTests.swift
Tests/NimbusViewModelsTests/: DuplicatesViewModelTests.swift  LocalizerTests.swift
docs/: ARCHITECTURE.md  DISTRIBUTION.md  FFI.md  SAFETY.md
rust/: Cargo.toml
rust/nimbus_core/: Cargo.toml
rust/nimbus_core/src/: dup.rs  ffi.rs  lib.rs  phash.rs
scripts/: build-rust.sh  gen-bindings.sh  make-icon.swift  notarize.sh  package-dmg.sh
(+37 files in other folders)
